@@ -1,3 +1,5 @@
+* Sun Nov 20 2011 Christian Reiner: version 0.1.1
+- fixed access rights visualization for items
 * Tue Nov 15 2011 Christian Reiner: version 0.1.0
 - initial (and certainly more'n buggy) release
 - publication on kde-apps.org
